<resources>
    <string name="app_name">my Ride App</string>
    <string name="email_id">email id</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="failed">Authentication failed</string>
    <string name="image">image</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Rides Filter</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">profile</string>
    <string name="menu_slideshow">bus booking</string>
    <string name="menu_tools">setting</string>
    <string name="menu_share">help</string>
    <string name="menu_send">History</string>

    <string name="username">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="my_number">+923424475733</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="city">Present Location</string>
    <string name="no_text"> </string>

    <string name="permission_refused">Permission was not granted</string>
    <string name="permission_request_title">Special Permission Request</string>
    <string name="app_permission_notice">This permission request is very important to your app functionality.
    If it is not granted your app m</string>


</resources>
