<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".singin_activity">

    <TextView
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/icons"
        android:textSize="40sp"
        android:textStyle="bold">

    </TextView>

    <!--

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="#000000"
            app:boxStrokeColor="#000000"
            android:layout_margin="5dp"
            android:id="@+id/tiFullName"
            app:hintEnabled="true"
            android:textColorHint="@color/design_default_color_primary"
            app:errorEnabled="true"
            android:hint="Outlined box">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    -->

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textshape"
        android:hint="Email"
        android:inputType="textPersonName"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textshape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />


    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buttonshape"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_having_account"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@android:color/white"
        />


    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/google_sign_up"
        app:isDarkTheme="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</LinearLayout>